VariationHandling/JES_files/2016_preVFP/Histo_1000_TTTo2L2Nu_boostedShiftedSrc11Up.err
[8MB/455.1MB][  1%][>                                                 ][2MB/s]  [16MB/455.1MB][  3%][=>                                                ][2.286MB/s]  [24MB/455.1MB][  5%][==>                                               ][2.667MB/s]  [32MB/455.1MB][  7%][===>                                              ][2.909MB/s]  [40MB/455.1MB][  8%][====>                                             ][3.077MB/s]  [48MB/455.1MB][ 10%][=====>                                            ][3.2MB/s]  [56MB/455.1MB][ 12%][======>                                           ][3.294MB/s]  [64MB/455.1MB][ 14%][=======>                                          ][3.368MB/s]  [72MB/455.1MB][ 15%][=======>                                          ][3.13MB/s]  [80MB/455.1MB][ 17%][========>                                         ][3.077MB/s]  [88MB/455.1MB][ 19%][=========>                                        ][3.034MB/s]  [96MB/455.1MB][ 21%][==========>                                       ][3.097MB/s]  [104MB/455.1MB][ 22%][===========>                                      ][3.152MB/s]  [112MB/455.1MB][ 24%][============>                                     ][3.294MB/s]  [120MB/455.1MB][ 26%][=============>                                    ][3.429MB/s]  [128MB/455.1MB][ 28%][==============>                                   ][3.556MB/s]  [136MB/455.1MB][ 29%][==============>                                   ][3.676MB/s]  [144MB/455.1MB][ 31%][===============>                                  ][3.789MB/s]  [152MB/455.1MB][ 33%][================>                                 ][3.897MB/s]  [160MB/455.1MB][ 35%][=================>                                ][4MB/s]  [168MB/455.1MB][ 36%][==================>                               ][4.098MB/s]  [176MB/455.1MB][ 38%][===================>                              ][4.19MB/s]  [184MB/455.1MB][ 40%][====================>                             ][4.279MB/s]  [192MB/455.1MB][ 42%][=====================>                            ][4.267MB/s]  [200MB/455.1MB][ 43%][=====================>                            ][4.167MB/s]  [208MB/455.1MB][ 45%][======================>                           ][4MB/s]  [216MB/455.1MB][ 47%][=======================>                          ][3.857MB/s]  [224MB/455.1MB][ 49%][========================>                         ][3.733MB/s]  [232MB/455.1MB][ 50%][=========================>                        ][3.625MB/s]  [240MB/455.1MB][ 52%][==========================>                       ][3.582MB/s]  [248MB/455.1MB][ 54%][===========================>                      ][3.543MB/s]  [256MB/455.1MB][ 56%][============================>                     ][3.556MB/s]  [264MB/455.1MB][ 58%][=============================>                    ][3.568MB/s]  [272MB/455.1MB][ 59%][=============================>                    ][3.627MB/s]  [280MB/455.1MB][ 61%][==============================>                   ][3.684MB/s]  [288MB/455.1MB][ 63%][===============================>                  ][3.74MB/s]  [296MB/455.1MB][ 65%][================================>                 ][3.795MB/s]  [304MB/455.1MB][ 66%][=================================>                ][3.848MB/s]  [312MB/455.1MB][ 68%][==================================>               ][3.9MB/s]  [320MB/455.1MB][ 70%][===================================>              ][3.951MB/s]  [328MB/455.1MB][ 72%][====================================>             ][3.952MB/s]  [336MB/455.1MB][ 73%][====================================>             ][3.953MB/s]  [344MB/455.1MB][ 75%][=====================================>            ][3.954MB/s]  [352MB/455.1MB][ 77%][======================================>           ][3.911MB/s]  [360MB/455.1MB][ 79%][=======================================>          ][3.83MB/s]  [368MB/455.1MB][ 80%][========================================>         ][3.755MB/s]  [376MB/455.1MB][ 82%][=========================================>        ][3.686MB/s]  [384MB/455.1MB][ 84%][==========================================>       ][3.623MB/s]  [392MB/455.1MB][ 86%][===========================================>      ][3.564MB/s]  [400MB/455.1MB][ 87%][===========================================>      ][3.509MB/s]  [408MB/455.1MB][ 89%][============================================>     ][3.458MB/s]  [416MB/455.1MB][ 91%][=============================================>    ][3.41MB/s]  [424MB/455.1MB][ 93%][==============================================>   ][3.365MB/s]  [432MB/455.1MB][ 94%][===============================================>  ][3.273MB/s]  [440MB/455.1MB][ 96%][================================================> ][3.143MB/s]  [448MB/455.1MB][ 98%][=================================================>][3.048MB/s]  [455.1MB/455.1MB][100%][==================================================][2.994MB/s]  [455.1MB/455.1MB][100%][==================================================][2.994MB/s]  
In file included from input_line_8:1:
/pool/condor/dir_40952/FillHistograms_Extended_JES.C:244:70: warning: 'if' initialization statements are a C++17 extension [-Wc++17-extensions]
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                     ^
/pool/condor/dir_40952/FillHistograms_Extended_JES.C:244:71: error: expected expression
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                      ^
